<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APC UPS Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="initiate_shutdown">Initiate Shutdown at:</string>
    <string name="wakeup_at">Wake up at:</string>
    <string name="show_in_powerchute">Show in PowerChute(R)</string>
    <string name="start_with">Start : </string>
    <string name="shutdown_period">Period : </string>
    <string name="show_in_lcd">Show in LCD</string>
    <string name="seconds">sec.</string>
    <string name="minute">min.</string>
    <string name="hour">hour </string>
    <string name="days">day(s) </string>
    <string name="months">month(s) </string>
    <string name="years">year(s) </string>
    <string name="expected_wakeup">Expected wake up time</string>
    <string name="now_showing_lcd">How long is remaining time that is displayed on the LCD?</string>
    <string name="calculate">Calculate</string>
    <string name="server_wakeup_at">Server will wake up at...\n</string>

</resources>
